# Poco_practice

./: CMakeLists.txt  README.md  create_and_build_conan.sh
include/: cv_client.hpp  cv_comm_definitions.hpp  cv_server.hpp  socket_srvr.hpp
src/: client.cpp  cv_client.cpp  cv_client_main.cpp  cv_client_receive.cpp  cv_client_send.cpp  cv_client_send_old.cpp  cv_server.cpp  cv_server_main.cpp  cv_server_receive.cpp  cv_server_receive_old.cpp  main.cpp  server.cpp  text_client.cpp  text_server.cpp
